changed the image links commit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header id="firstSection">
-        <img src="/Assets/pexels-negativespace-160107.jpg" alt="my banner" width="300" height="300">
+        <img src="Assets/pexels-negativespace-160107.jpg" alt="my banner" width="300" height="300">
         <div class=" header-overlay"></div>
         <div class="animatedTexts">
             <h1 class="animatedH1">
@@ -30,7 +30,7 @@
     <section class="midSection">
         <div class="box">
             <div class="items">
-                <img class="picture" src="/Assets/bright.jpg" alt="an image of me laughing" width="250" height="200">
+                <img class="picture" src="Assets/bright.jpg" alt="an image of me laughing" width="250" height="200">
                 <div class="overlay"></div>
             </div>
             <div>
